client/k8s/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kozyol-front-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: skazhi.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kozyol-front-service
                port:
                  number: 80
  tls:
    - secretName: kozyol-front-tls
      hosts:
        - skazhi.be
